feat :: 데이터가 없을 시 Null 값 반환